Tue Feb 15 23:16:14 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htnet/HtHTTP.cc (isParsable): Remove application/pdf as a
	default type--it is now handled through the ExternalParser
	interface if at all.

	* htcommon/defaults.cc: Remove pdf_parser attribute.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.

	* htdig/Document.cc (getParsable): Remove PDF once and for all
	(hopefully).

	* htdig/ExternalParser.cc (parse): Ditto.

	* configure.in: Remove check for PDF_PARSER.

	* configure: Regenerate using autoconf

	* htdig/Makefile.am: Remove PDF.cc and PDF.h.

	* Makefile.in, */Makefile.in: Regenerate using automake --foreign

Tue Feb 15 12:02:39 EET 2000  Vadim Chekan  <vadim@etc.lviv.ua>

	* htcommon/HtConfiguration.cc,HtConfiguration.h: fixed bug discovered
	by Gilles. HtConfiguration was able to get info only from "url" and
	"server" block.

	* htcommon/conf_parser.yxx: deleted 1st parameter for new char[],
	lefted when realloc was replaced by new char[]. Removed a few unused 
	variable declaration.

	* htcommon/Makefile.am: added -d flag to bison to generate
	conf_parser.h template from conf_parser.yxx;
	conf_lexer.lxx uses #include conf_parser.h;
	conf.tab.cc.h removed.

Sun Feb 13 21:19:04 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Get rid of uncoded_db_compatible since
	the current DB format has clearly broken backwards compatibility.

	* htsearch/Display.cc (Display), htnotify/htnotify.cc (main),
	htmerge/docs.cc (convertDocs), htmerge/db.cc (mergeDB),
	htdig/htdig.cc (main): Remove call to DocumentDB::setCompatibility().

	* htcommon/DocumentDB.h (class DocumentDB): Remove
	setCompatibility and related private variable.

	* htcommon/DocumentDB.cc ([], Delete): Don't bother checking for
	an unencoded URL, at this point all URLs will be encoded using
	HtURLCodec.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Regenerate using cf_generate.pl.
